--- a/example/package.json
+++ b/example/package.json
@@ -14,11 +14,13 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.7",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.10",
     "react-native-builder-bob": "^0.36.0"
   },
   "private": true
