--- a/example/package.json
+++ b/example/package.json
@@ -21,6 +21,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
+    "@types/node": "^22.13.5",
     "react-native-builder-bob": "^0.36.0"
   },
   "private": true
