--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "example": "example"
   },
   "dependencies": {
+    "JSONStream": "^1.3.5",
     "abort-controller": "^3.0.0",
     "accepts": "^1.3.8",
     "acorn": "^8.14.0",
@@ -380,6 +381,7 @@
     "execa": "^5.1.1",
     "exit": "^0.1.2",
     "expect": "^29.7.0",
+    "expo": "^52.0.37",
     "exponential-backoff": "^3.1.2",
     "external-editor": "^3.1.0",
     "fast-deep-equal": "^3.1.3",
@@ -565,7 +567,6 @@
     "json5": "^2.2.3",
     "jsonfile": "^6.1.0",
     "jsonparse": "^1.3.1",
-    "JSONStream": "^1.3.5",
     "jsx-ast-utils": "^3.3.5",
     "keyv": "^4.5.4",
     "kind-of": "^6.0.3",
