--- a/example/package.json
+++ b/example/package.json
@@ -25,5 +25,10 @@
     "@types/node": "^22.13.5",
     "react-native-builder-bob": "^0.36.0"
   },
-  "private": true
+  "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "npx prettier --write ."
+    }
+  }
 }
