--- a/package.json
+++ b/package.json
@@ -337,6 +337,7 @@
     "diff-sequences": "^29.6.3",
     "dir-glob": "^3.0.1",
     "doctrine": "^3.0.0",
+    "domaincomponent": "^0.2.0",
     "dot-prop": "^5.3.0",
     "dunder-proto": "^1.0.1",
     "ee-first": "^1.1.1",
