--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig",
   "compilerOptions": {
-    "types": ["node"]
+    "types": ["node"],
+    "noImplicitAny": false
   }
 }
