--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@release-it/conventional-changelog": "^9.0.2",
     "@types/jest": "^29.5.5",
     "@types/react": "^18.2.44",
+    "@types/react-native-vector-icons": "^6.4.18",
     "commitlint": "^17.0.2",
     "del-cli": "^5.1.0",
     "eslint": "^8.51.0",
@@ -718,6 +719,7 @@
     "rc": "^1.2.8",
     "react-devtools-core": "^5.3.2",
     "react-is": "^18.3.1",
+    "react-native-vector-icons": "^10.2.0",
     "react-refresh": "^0.14.2",
     "read-package-up": "^11.0.0",
     "read-pkg": "^9.0.1",
