--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "domaincomponent",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "domain ui component",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.js",
+  "react-native": "src/index.tsx",
   "module": "./lib/module/index.js",
   "exports": {
     ".": {
@@ -78,10 +79,11 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.0.3",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-builder-bob": "^0.36.0",
+    "react-native-builder-bob": "^0.37.0",
     "release-it": "^17.10.0",
     "typescript": "^5.2.2"
   },
