--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "domaincomponent",
-  "version": "1.4.2",
+  "version": "1.5.0",
   "description": "domain ui component",
   "source": "./src/index.tsx",
   "main": "./lib/commonjs/index.js",
@@ -192,6 +192,7 @@
     "example": "example"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.15",
     "JSONStream": "^1.3.5",
     "abort-controller": "^3.0.0",
     "accepts": "^1.3.8",
@@ -387,6 +388,7 @@
     "exit": "^0.1.2",
     "expect": "^29.7.0",
     "expo": "^52.0.37",
+    "expo-router": "^4.0.19",
     "exponential-backoff": "^3.1.2",
     "external-editor": "^3.1.0",
     "fast-deep-equal": "^3.1.3",
