--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "forceConsistentCasingInFileNames": true,
     "jsx": "react-native",
     "lib": ["ESNext"],
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
     "noEmit": false,
     "noFallthroughCasesInSwitch": true,
     "noImplicitReturns": true,
